--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "name": "Andresfadu.com_entrega-final",
   "scripts": {
     "watch:css": "nodemon -e scss -x \"npm run build:css\"",
-    "build:css": "node-sass --importer node_modules/node-sass-glob-importer/dist/cli.js --output-style compressed scss/estilos.scss css/main.css"
+    "build:css": "node-sass --importer node_modules/node-sass-glob-importer/dist/cli.js --output-style compressed scss/style.scss css/style.css"
   },
   "version": "1.0.0",
   "devDependencies": {
